--- a/mystyle.css
+++ b/mystyle.css
@@ -1,87 +1,80 @@
-*{  
+*{
     margin: 0%; padding: 0%;
     box-sizing: border-box;
-    background-color: rgb(255, 232, 232);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 body{
-    display: grid;
-    justify-content: center;
+    background-color: whitesmoke;
+}
+.main{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    flex-direction: column;
 }
 .heading{
-    margin-top: 1%;
-    display: grid;
-    place-items: center;
-    color: rgb(57, 57, 175);
-}
-.firstline{
-    margin-top: 1%;
-    color: rgb(57, 57, 175);
+    color: blue;
 }
 .box1{
-    background-color: rgb(57, 57, 175);
+    background-color: white;
+    width: 70vw; height: 50vh;
+    border-radius: 2vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 100px;
-    border-radius: 20px;
-    border: 10px solid white;
-    height: 300px; width: 500px;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#date{
-    color: white;
-    width: 90px; height: 30px;
-    margin-top: 10%;
-}
-#month{
-    color: white;
-    width: 90px; height: 30px;
-    margin-top: 10%;
-}
-#year{
-    color: white;
-    width: 90px; height: 30px;
-    margin-top: 10%;
-}
-.title{
-    color: white;
-    font-size: 18px;
-    margin-top: 11%;
-}
-#age1{
-    color: white;
+.titlediv{
+    background-color: whitesmoke;
+    color: black;
+    height: 5vh; width: 70vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 button{
+    background-color: rgb(36, 23, 180);
     color: white;
-    display: flex;
-    align-self: center;
-    flex-wrap: wrap;
-    background-color: rgb(29, 146, 55);
-    font-size: 15px;
-    margin-top: -200px;
-    padding: 2%;
     border: none;
-    border-radius: 5px;
-}
-#date{
-    border-radius: 5px;
-    background-color: white;
-    color: black;
-}
-#month{
-    border-radius: 5px;
-    background-color: white;
-    color: black;
-}
-#year{
-    border-radius: 5px;
-    background-color: white;
-    color: black;
+    cursor: pointer;
+    height: 5vh; width: 10vw;
+    border-radius: 5%;
 }
 button:hover{
-    background-color: rgb(93, 158, 55);    
+    background-color: rgb(52, 34, 247);
 }
-.title{
-    background-color: rgb(57, 57, 175);
+#date{
+    background-color: whitesmoke;
+    color: black;
+    width: 90px; height: 30px;
+    margin-top: 10%;
+}
+#date:hover{
+    background-color: white;
+}
+#month{
+    background-color: whitesmoke;
+    color: black;
+    width: 90px; height: 30px;
+    margin-top: 10%;
+}
+#month:hover{
+    background-color: white;
+}
+#year{
+    background-color: whitesmoke;
+    color: black;
+    width: 90px; height: 30px;
+    margin-top: 10%;
+}
+#year:hover{
+    background-color: white;
+}
+#show_result{
+    background-color: white;
+    height: 20vh; width: 70vw;
+    border-radius: 2vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 5%;
 }
