--- a/mystyle.css
+++ b/mystyle.css
@@ -77,4 +77,8 @@ button:hover{
     border-radius: 2vh;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
 }
